cmake_minimum_required(VERSION 3.23)
project(program4PhamChen)

set(CMAKE_CXX_STANDARD 14)

add_executable(program4PhamChen main.cpp BinarySearchTree.cpp BinarySearchTree.h Movie.cpp Movie.h Drama.cpp Drama.h Comedy.cpp Comedy.h Classics.cpp Classics.h Hashtable.cpp Hashtable.h Transactions.cpp Transactions.h customer.cpp customer.h)
